# gem

./: .gitignore  CMakeLists.txt  README.md  arena.h  bezier.c  env.h  ffmpeg.h  ffmpeg_linux.c  gem.c  interpolators.h  nob.c  nob.h  plug.h  probe.cpp  squares.c  tasks.c  tasks.h  template.c  tests.c  tm.c
der/: bezier.tex
